--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 bs4
 flask
 pymongo
-git+https://github.com/zhuth/PyMongoWrapper/
+#git+https://github.com/zhuth/PyMongoWrapper/
 opencc-python-reimplemented
 fitz
